# jh-loops

./: .gitignore  README.md  pyproject.toml
.claude/skills/: jh-loops-issue
.claude/skills/jh-loops-issue/: SKILL.md
conventions/: labels.sh
conventions/ISSUE_TEMPLATE/: feature.md
docs/: design.md
src/jh_loops/: __init__.py  cli.py  config.py  github.py  issues.py  labels.py  orchestrator.py  prompts.py  selection.py  verify.py  worktree.py
src/jh_loops/agents/: __init__.py  base.py
tests/: test_agents.py  test_github.py  test_issues.py  test_orchestrator.py  test_worktree.py
